--- a/Arduino/20201203.md
+++ b/Arduino/20201203.md
@@ -45,8 +45,8 @@ bool led_state = false;
 int16_t AcX, AcY, AcZ, Tmp, GyX, GyY, GyZ; 
 
 // Definições da rede Wifi
-const char* SSID = "이현수의 iPhone";
-const char* PASSWORD = "urnotyelping00";
+const char* SSID = "";
+const char* PASSWORD = "";
 
 // endereço IP local do Servidor Web instalado na Raspberry Pi 3
 // onde será exibida a página web
@@ -323,5 +323,277 @@ String makeGETlocation() {
   Serial.println("Data from map\n");
   Serial.println(data);  
   return data; 
+}
+
+/*
+ * Função que envia ao servidor a localização do NodeMCU
+ * função realiza um POST request ao servidor no link /location
+ * o servidor por sua vez exibe a localização do NodeMCU no Google Maps
+ */
+void makePOSTlocation() {
+  String location = makeGETlocation(); // guarda o JSON de geolocalização na variável location
+  if(!client.connect(rpiHost, 3000)) {    // aqui conectamos ao servidor
+    Serial.print("Could not connect to host: \n");
+    Serial.print(rpiHost);
+  } else {
+    // realiza HTTP POST request    
+    client.println("POST /location HTTP/1.1");
+    client.println("Host: 192.168.0.24");
+    client.println("Content-Type: application/json");
+    client.print("Content-Length: ");
+    client.println(location.length());
+    client.println();
+    client.println(location);    // enviamos o JSON ao servidor
+  }
+}
+
+void setup() {
+  Serial.begin(115200);
+  Serial.print("connecting");
+
+  Firebase.begin(FIREBASE_HOST, FIREBASE_AUTH);
+ 
+  pinMode(D0, INPUT);
+  pinMode(D1, INPUT);
+  pinMode(D2, INPUT);
+  pinMode(D3, OUTPUT);
+  pinMode(D4, OUTPUT);
+  pinMode(D8, OUTPUT);
+  pinMode(LED_BUILTIN, OUTPUT);
+
+  Serial.println("\nStart Setting Up Wifi\n");
+  initWiFi();
+
+  Serial.println("\nInitiating MPU6500\n");
+  initI2C();
+  initMPU();
+  checkMPU(MPU_ADDR);
+
+  Serial.println("Location Json Print\n");
+  makePOSTlocation();
+
+  Serial.println("\nLoop Start\n");
+}
+
+void loop() {
+  readRawMPU();    // lê os dados do sensor
+  populateJSON();  // transforma os dados em formato JSON  
+
+  //Select Exercise.
+  if (digitalRead(D0) == HIGH) { //Button을 누를 때마다 exercise 변수의 값이 바뀌면서 운동 종목을 선택한다.
+    num_exercise = 0;
+    name_exercise = "SideLateralRaise";
+    reset_fun();
+  }
+  if (digitalRead(D1) == HIGH) { //Button을 누를 때마다 exercise 변수의 값이 바뀌면서 운동 종목을 선택한다.
+    num_exercise = 1;
+    name_exercise = "PushUp";
+    reset_fun();
+  }
+  if (digitalRead(D2) == HIGH) { //Button을 누를 때마다 exercise 변수의 값이 바뀌면서 운동 종목을 선택한다.
+    num_exercise = 2;
+    name_exercise = "DeadLift";
+    reset_fun();
+  }
+  Serial.println("Number of Exercise: " + String(num_exercise));
+  Serial.println("Count HIGH: " + String(count_high) + "\tCount LOW: " + String(count_low));
+
+  //Time.
+  if (time_val == 0.0) {
+    digitalWrite(D4, 1);
+  } else {
+    digitalWrite(D4, 0);
+  }
+  time_val += 0.5;
+  Serial.println("at " + String(time_val) + "s");
+  Serial.println(""); // Add an empty line
+  delay(500);
+
+  //MyoWare Muscle Sensor.
+  force_scale = analogRead(A0);
+  Serial.println(force_scale);
+  
+  ////////////////////////////////
+  //     사이드 레터럴 레이즈     //
+  ///////////////////////////////
+  if (time_val < 40.0 && num_exercise == 0) {
+    if ((GyX >= 3000.0) && (GyX <= 8000.0) || ((GyX >= -8000.0) && (GyX <= -3000.0)))  //gX 조건.
+      if ((GyZ >= -4000.0) && (GyZ <= 0.0) || (GyZ >= 0.0) && (GyZ <= 4000.0)) //gZ조건.
+        if ((GyY >= -4000.0) && (GyY <= 0.0) || (GyY >= 0.0) && (GyY <= 4000.0)) { //gY조건.
+          Serial.println("사이드 레터럴 레이즈 완벽 성공!");
+          count_high += 1;
+          count_all += 1;
+          vibration_led_high();
+        } else {
+          Serial.println("사이드 레터럴 레이즈 성공!");
+          count_low += 1;
+          count_all += 1;
+          vibration_led_low();
+        }
+        
+    posture_score = count_high*20 + count_low*10;
+    
+    if (count_all == 5) {
+      Serial.println("| 사이드 레터럴 레이즈 | 운동횟수 5/5번 | 점수" + String(posture_score) + "점 |");
+      delay(1000);
+      reset_fun();
+    }
+  } else if ((count_all != 5) && (time_val >= 40.0) && (num_exercise == 0)) {
+      Serial.println("| 사이드 레터럴 레이즈 | 운동횟수 " + String(count_all) + "/5번 | 점수 " + String(posture_score) + "점 |");
+      delay(1000);
+      reset_fun();
+    }
+
+  ///////////////////////
+  //     팔굽혀펴기     //
+  //////////////////////
+  if (time_val < 30.0 && num_exercise == 1) {
+    if ((GyX >= 75.0) && (GyX <= 125.0) || ((GyX >= -125.0) && (GyX <= -75.0)))  //GyX 조건.
+      if ((GyY >= -25.0) && (GyY <= 0.0) || (GyY >= 0.0) && (GyY <= 25.0)) //gY조건.
+        if ((GyZ >= -25.0) && (GyZ <= 0.0) || (GyZ >= 0.0) && (GyZ <= 25.0)) { //gZ조건.
+          Serial.println("팔굽혀펴기 완벽 성공!");
+          count_high += 1;
+          count_all += 1;
+          vibration_led_high();
+        } else {
+          Serial.println("팔굽혀펴기 성공!");
+          count_low += 1;
+          count_all += 1;
+          vibration_led_low();
+        }
+        
+    posture_score = count_high*20 + count_low*10;
+    
+    if (count_all == 5) {
+      Serial.println("| 팔굽혀펴기 | 운동횟수 5/5번 | 점수" + String(posture_score) + "점 |");
+      delay(1000);
+      reset_fun();
+    }
+  } else if ((count_all != 5) && (time_val >= 30.0) && (num_exercise == 1)) {
+      Serial.println("| 팔굽혀펴기 | 운동횟수 " + String(count_all) + "/5번 | 점수 " + String(posture_score) + "점 |");
+      delay(1000);
+      reset_fun();
+    }
+
+  ///////////////////////
+  //     데드리프트     //
+  //////////////////////
+  if (time_val < 60.0 && num_exercise == 2) {
+    delay(1000);
+    
+    if ((GyX >= -20.0) && (GyX <= 0.0) || ((GyX >= 0.0) && (GyX <= 20.0)))  //gX 조건.
+      if ((GyZ >= -20.0) && (GyZ <= 0.0) || (GyZ >= 0.0) && (GyZ <= 20.0)) //gZ조건.
+        if ((GyY >= -10.0) && (GyY <= 0.0) || (GyY >= 0.0) && (GyY <= 10.0)) { //gY조건.
+          Serial.println("데드리프트 완벽 성공!");
+          count_high += 1;
+          count_all += 1;
+          vibration_led_high();
+        } else {
+          Serial.println("데드리프트 성공!");
+          count_low += 1;
+          count_all += 1;
+          vibration_led_low();
+        }
+        
+    posture_score = count_high*20 + count_low*10;
+    
+    if (count_all == 5) {
+      Serial.println("| 데드리프트 | 운동횟수 5/5번 | 점수" + String(posture_score) + "점 |");
+      delay(1000);
+      reset_fun();
+    }
+  } else if ((count_all != 5) && (time_val >= 60.0) && (num_exercise == 2)) {
+      Serial.println("| 데드리프트 | 운동횟수 " + String(count_all) + "/5번 | 점수 " + String(posture_score) + "점 |");
+      delay(1000);
+      reset_fun();
+    }  
+  delay(100);  
+
+  //Firebase.
+  getExerciseScore();
+  getExerciseNum();
+}
+
+void getExerciseScore() {
+    Firebase.setFloat("try/score", posture_score);
+}
+
+void getExerciseNum() {
+    Firebase.setString("try/exercise", name_exercise);
+}
+
+void vibration_led_high() {
+  if (num_exercise == 0) {
+    digitalWrite(D8, 1);
+    digitalWrite(D3, 1);
+    delay(375);
+    digitalWrite(D8, 0);
+    digitalWrite(D3, 0);
+    delay(375);
+    digitalWrite(D8, 1);
+    digitalWrite(D3, 1);
+    delay(375);
+    digitalWrite(D8, 0);
+    digitalWrite(D3, 0);
+    delay(375);
+  } else if (num_exercise == 1) {
+    digitalWrite(D8, 1);
+    digitalWrite(D3, 1);
+    delay(150);
+    digitalWrite(D8, 0);
+    digitalWrite(D3, 0);
+    delay(100);
+    digitalWrite(D8, 1);
+    digitalWrite(D3, 1);
+    delay(150);
+    digitalWrite(D8, 0);
+    digitalWrite(D3, 0);
+    delay(100);
+  } else if (num_exercise == 2) {
+    digitalWrite(D8, 1);
+    digitalWrite(D3, 1);
+    delay(750);
+    digitalWrite(D8, 0);
+    digitalWrite(D3, 0);
+    delay(750);
+    digitalWrite(D8, 1);
+    digitalWrite(D3, 1);
+    delay(750);
+    digitalWrite(D8, 0);
+    digitalWrite(D3, 0);
+    delay(750);
+  } 
+}
+
+void vibration_led_low() {
+  if (num_exercise == 0) {
+    digitalWrite(D8, 1);
+    digitalWrite(D3, 1);
+    delay(750);
+    digitalWrite(D8, 0);
+    digitalWrite(D3, 0);
+    delay(750);
+  } else if (num_exercise == 1) {
+    digitalWrite(D8, 1);
+    digitalWrite(D3, 1);
+    delay(500);
+    digitalWrite(D8, 0);
+    digitalWrite(D3, 0);
+  } else if (num_exercise == 2) {
+    delay(1000);
+    digitalWrite(D8, 1);
+    digitalWrite(D3, 1);
+    delay(1000);
+    digitalWrite(D8, 0);
+    digitalWrite(D3, 0);
+    delay(1000);
+  }
+}
+
+void reset_fun() {
+  time_val = 0.0;
+  count_all = 0;
+  count_high = 0;
+  count_low = 0;
 }
 </pre>
